puree-tests/src/test/resources/neg/UnusedOptionNeg.scala
object UnusedOptionNeg {
  def f(): Unit = {
    Option(1)
  }
}
